@@ -1,3 +1,10 @@
+1998-07-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* hex-document.c: changed document menu callbacks because of
+	changes in GnomeMDI.
+	* callbacks.c (get_search_string): fixed a small bug with capital
+	letters in hex values.
+	
 1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>
 
 	* ghex.desktop: Added Portuguese translation.
